tests/negative/symbols/use_undef4.orng
// use_undef4.orng:14:8: error: symbol `x` is never defined
//     x.>add(4)
//       ^
// use_undef4.orng:13:10: note: declared here
//     let x: &dyn Add = undefined
//         ^
// 
trait Add {
    virtual fn add(&self, other: Int) -> Int
}

fn main() -> Int {
    let x: &dyn Add = undefined
    x.>add(4)
}